website/versioned_docs/version-0.2.1/reference/domain.md
<!-- Code generated by gomarkdoc. DO NOT EDIT -->

# domain

```go
import "github.com/Bugs5382/go-saga-orchestration/domain"
```

Package domain contains the in\-process types go\-saga\-orchestration exchanges with its HTTP layer, store, and engine. Definitions and runs are the core concepts.

## type ActionRegistration

ActionRegistration describes one action a service exposes. Stored in definitions.action\_registry.

```go
type ActionRegistration struct {
    ID               uuid.UUID      `json:"id"`
    Service          string         `json:"service"`
    ActionName       string         `json:"action_name"`
    Version          int            `json:"version"`
    Description      string         `json:"description,omitempty"`
    Category         string         `json:"category,omitempty"`
    Compensable      bool           `json:"compensable"`
    InputSchema      map[string]any `json:"input_schema"`
    OutputSchema     map[string]any `json:"output_schema"`
    ErrorCodes       []string       `json:"error_codes,omitempty"`
    DefaultRetry     *RetryPolicy   `json:"default_retry,omitempty"`
    DefaultTimeoutMS int            `json:"default_timeout_ms,omitempty"`
    Deprecated       bool           `json:"deprecated"`
    RegisteredAt     time.Time      `json:"registered_at"`
    ServiceVersion   string         `json:"service_version,omitempty"`
    DryRunSupported  bool           `json:"dry_run_supported"`
    LicenseGroup     string         `json:"license_group,omitempty"`
}
```

<a name="Branch"></a>
## type Branch

Branch is one outgoing edge of a decision/parallel step.

```go
type Branch struct {
    Next string `json:"next"`
}
```

<a name="Compensation"></a>
## type Compensation

Compensation describes how to undo a completed step. Nil means "non\-compensable; log a warning when rolling back."

```go
type Compensation struct {
    Action string         `json:"action"`
    Inputs map[string]any `json:"inputs,omitempty"`
}
```

<a name="DecisionTableRow"></a>
## type DecisionTableRow

DecisionTableRow is one row in a decision\_table. The When expression is CEL; on truthy result the Then map becomes the rule's output.

```go
type DecisionTableRow struct {
    When string         `json:"when"`
    Then map[string]any `json:"then"`
}
```

<a name="EventType"></a>
## type EventType

EventType identifies what changed.

```go
type EventType string
```

<a name="EventSagaStarted"></a>The EventType constants enumerate the audit events recorded for a run.

```go
const (
    EventSagaStarted         EventType = "saga.started"
    EventStepDispatched      EventType = "step.dispatched"
    EventStepStarted         EventType = "step.started"
    EventStepSucceeded       EventType = "step.succeeded"
    EventStepFailed          EventType = "step.failed"
    EventStepSkipped         EventType = "step.skipped"
    EventStepPaused          EventType = "step.paused"
    EventRunSucceeded        EventType = "run.succeeded"
    EventRunFailed           EventType = "run.failed"
    EventRunCancelled        EventType = "run.cancelled"
    EventCompensationStarted EventType = "compensation.started"

    EventLog                 EventType = "log"
    EventMetric              EventType = "metric"
    EventRuleEvaluated       EventType = "rule.evaluated"
    EventLicenseGateRejected EventType = "license.gate.rejected"
)
```

<a name="HitPolicy"></a>
## type HitPolicy

HitPolicy controls how rows in a decision\_table are evaluated. v1 supports only HitPolicyFirst \(return the first matched row's output\).

```go
type HitPolicy string
```

<a name="HitPolicyFirst"></a>HitPolicyFirst returns the first matched row's output; the only policy in v1.

```go
const (
    HitPolicyFirst HitPolicy = "first"
)
```

<a name="RetryPolicy"></a>
## type RetryPolicy

RetryPolicy bounds step\-level retry. Defaults applied at engine time if a step omits the field.

```go
type RetryPolicy struct {
    MaxAttempts      int     `json:"max_attempts"`
    InitialBackoffMS int     `json:"initial_backoff_ms"`
    MaxBackoffMS     int     `json:"max_backoff_ms,omitempty"`
    Multiplier       float64 `json:"multiplier,omitempty"`
    Jitter           bool    `json:"jitter,omitempty"`
}
```

<a name="RuleDefinition"></a>
## type RuleDefinition

RuleDefinition is one version of one rule. Stored in definitions.rule\_definitions.

```go
type RuleDefinition struct {
    ID        uuid.UUID `json:"id"`
    RuleID    string    `json:"rule_id"`
    Version   int       `json:"version"`
    TenantID  *string   `json:"tenant_id,omitempty"`
    Name      string    `json:"name"`
    RuleType  RuleType  `json:"rule_type"`
    Spec      RuleSpec  `json:"spec"`
    Published bool      `json:"published"`
    CreatedAt time.Time `json:"created_at,omitempty"`
    CreatedBy string    `json:"created_by,omitempty"`
}
```

<a name="NewRuleDefinition"></a>
### func NewRuleDefinition

```go
func NewRuleDefinition(ruleID string, version int, name string, ruleType RuleType, spec RuleSpec, createdBy string) RuleDefinition
```

NewRuleDefinition returns a fresh RuleDefinition with a generated ID and current timestamp. Caller fills in the spec.

<a name="RuleSpec"></a>
## type RuleSpec

RuleSpec is the union of rule\-type\-specific bodies. v1 only fills in DecisionTable; later rule types add their own fields.

```go
type RuleSpec struct {
    HitPolicy     HitPolicy          `json:"hit_policy"`
    Rows          []DecisionTableRow `json:"rows"`
    DefaultOutput map[string]any     `json:"default_output,omitempty"`
}
```

<a name="RuleType"></a>
## type RuleType

RuleType is the discriminant for the union of rule shapes. v1 ships only \`decision\_table\`; v1.5\+ adds \`script\` and \`expression\_tree\`.

```go
type RuleType string
```

<a name="RuleTypeDecisionTable"></a>RuleTypeDecisionTable is the only rule type shipped in v1.

```go
const (
    RuleTypeDecisionTable RuleType = "decision_table"
)
```

<a name="RunState"></a>
## type RunState

RunState is the saga\-level state.

```go
type RunState string
```

<a name="RunStatePending"></a>The RunState constants enumerate the saga\-level lifecycle states.

```go
const (
    RunStatePending      RunState = "pending"
    RunStateRunning      RunState = "running"
    RunStatePaused       RunState = "paused"
    RunStateCompensating RunState = "compensating"
    RunStateSucceeded    RunState = "succeeded"
    RunStateFailed       RunState = "failed"
    RunStateCancelled    RunState = "cancelled"
)
```

<a name="RunState.IsTerminal"></a>
### func \(RunState\) IsTerminal

```go
func (s RunState) IsTerminal() bool
```

IsTerminal reports whether the state is final \(no further transitions\).

<a name="SagaRun"></a>
## type SagaRun

SagaRun is one running instance of a workflow. Stored in runtime.saga\_runs.

```go
type SagaRun struct {
    ID                    uuid.UUID         `json:"id"`
    WorkflowID            string            `json:"workflow_id"`
    DefinitionID          uuid.UUID         `json:"definition_id"`
    TenantID              *uuid.UUID        `json:"tenant_id,omitempty"`
    State                 RunState          `json:"state"`
    CurrentStep           string            `json:"current_step,omitempty"`
    Inputs                map[string]any    `json:"inputs"`
    Variables             map[string]any    `json:"variables"`
    StartedAt             time.Time         `json:"started_at"`
    LastEventAt           time.Time         `json:"last_event_at"`
    TerminalAt            *time.Time        `json:"terminal_at,omitempty"`
    RequiresManualReview  bool              `json:"requires_manual_review"`
    TriggerID             *uuid.UUID        `json:"trigger_id,omitempty"`
    ParentRunID           *uuid.UUID        `json:"parent_run_id,omitempty"`
    ParentStepID          *string           `json:"parent_step_id,omitempty"`
    ParentBranchID        *string           `json:"parent_branch_id,omitempty"`
    TryCatchStack         []TryCatchFrame   `json:"try_catch_stack,omitempty"`
    DryRun                bool              `json:"dry_run,omitempty"`
    WakeupAt              *time.Time        `json:"wakeup_at,omitempty"`
    AwaitedSignal         *string           `json:"awaited_signal,omitempty"`
    AwaitedEventTopic     *string           `json:"awaited_event_topic,omitempty"`
    AwaitedEventHeaders   map[string]string `json:"awaited_event_headers,omitempty"`
    FeatureOverrides      map[string]bool   `json:"feature_overrides,omitempty"`
    AwaitedActionDispatch *string           `json:"awaited_action_dispatch,omitempty"`
    CurrentAttempt        int               `json:"current_attempt,omitempty"`
}
```

<a name="NewSagaRun"></a>
### func NewSagaRun

```go
func NewSagaRun(workflowID string, definitionID uuid.UUID, tenantID *uuid.UUID, inputs map[string]any) SagaRun
```

NewSagaRun constructs a fresh run row in pending state. The caller supplies the resolved definition ID \+ inputs; the engine fills in CurrentStep when it picks the run up.

<a name="SagaRunEvent"></a>
## type SagaRunEvent

SagaRunEvent is one audit row. Stored in audit.saga\_run\_events.

```go
type SagaRunEvent struct {
    ID         uuid.UUID      `json:"id"`
    RunID      uuid.UUID      `json:"run_id"`
    StepID     string         `json:"step_id,omitempty"`
    Attempt    int            `json:"attempt"`
    EventType  EventType      `json:"event_type"`
    FromState  string         `json:"from_state,omitempty"`
    ToState    string         `json:"to_state,omitempty"`
    Actor      string         `json:"actor"`
    Metadata   map[string]any `json:"metadata,omitempty"`
    RecordedAt time.Time      `json:"recorded_at"`
}
```

<a name="NewEvent"></a>
### func NewEvent

```go
func NewEvent(runID uuid.UUID, stepID string, attempt int, eventType EventType, actor string) SagaRunEvent
```

NewEvent constructs an audit event with ID \+ timestamp filled in.

<a name="SagaSignal"></a>
## type SagaSignal

SagaSignal is one row in runtime.saga\_signals. External code writes these via POST /sagas/\{id\}/signal/\{name\}; the engine consumes them to wake \`wait\_for\_signal\` steps.

```go
type SagaSignal struct {
    ID         uuid.UUID      `json:"id"`
    RunID      uuid.UUID      `json:"run_id"`
    SignalName string         `json:"signal_name"`
    Payload    map[string]any `json:"payload,omitempty"`
    ReceivedAt time.Time      `json:"received_at"`
    ConsumedAt *time.Time     `json:"consumed_at,omitempty"`
}
```

<a name="SagaTrigger"></a>
## type SagaTrigger

SagaTrigger persists the binding between an external signal and a workflow definition. Created via REST or seeded via migration.

```go
type SagaTrigger struct {
    ID          uuid.UUID
    TriggerType TriggerType
    WorkflowID  string
    Version     int
    // Config is shape-by-trigger-type. For TriggerRecordTransition:
    //   { "record_type": "order", "from_state": "created",
    //     "to_state": "pending_review", "input_mapping": {...} }
    Config    map[string]any
    Enabled   bool
    TenantID  *uuid.UUID
    CreatedAt time.Time
    CreatedBy string
}
```

<a name="Step"></a>
## type Step

Step is a single node in the workflow graph.

```go
type Step struct {
    ID           string            `json:"id"`
    Type         StepType          `json:"type"`
    Next         string            `json:"next,omitempty"`
    Action       string            `json:"action,omitempty"`
    Inputs       map[string]any    `json:"inputs,omitempty"`
    Compensation *Compensation     `json:"compensation,omitempty"`
    Retry        *RetryPolicy      `json:"retry,omitempty"`
    Branches     map[string]Branch `json:"branches,omitempty"`
    Extra        map[string]any    `json:"-"`
}
```

<a name="StepType"></a>
## type StepType

StepType is the discriminant for the union of step shapes.

```go
type StepType string
```

<a name="StepTypeEnd"></a>The StepType constants enumerate every verb the engine can dispatch.

```go
const (
    StepTypeEnd            StepType = "end"
    StepTypeAction         StepType = "action"
    StepTypeDecision       StepType = "decision"
    StepTypeError          StepType = "error"
    StepTypeNoop           StepType = "noop"
    StepTypeSetVar         StepType = "set_var"
    StepTypeTransform      StepType = "transform"
    StepTypeMerge          StepType = "merge"
    StepTypeFilter         StepType = "filter"
    StepTypeMap            StepType = "map"
    StepTypeLog            StepType = "log"
    StepTypeMetricEmit     StepType = "metric_emit"
    StepTypeAssert         StepType = "assert"
    StepTypeHTTPRequest    StepType = "http_request"
    StepTypeWebhookEmit    StepType = "webhook_emit"
    StepTypeWaitDuration   StepType = "wait_duration"
    StepTypeWaitUntil      StepType = "wait_until"
    StepTypeWaitForSignal  StepType = "wait_for_signal"
    StepTypeWaitForEvent   StepType = "wait_for_event"
    StepTypeParallel       StepType = "parallel"
    StepTypeForeach        StepType = "foreach"
    StepTypeWhile          StepType = "while"
    StepTypeTryCatch       StepType = "try_catch"
    StepTypeSubSaga        StepType = "sub_saga"
    StepTypeSpawnSaga      StepType = "spawn_saga"
    StepTypeManualApproval StepType = "manual_approval"
    StepTypeCollectInput   StepType = "collect_input"
    StepTypeSwitch         StepType = "switch"
    StepTypeEmitSignal     StepType = "emit_signal"
    StepTypeCancel         StepType = "cancel"
    StepTypeEmitEvent      StepType = "emit_event"
)
```

<a name="TriggerType"></a>
## type TriggerType

TriggerType is the dispatch key for matching incoming signals \(events, cron ticks, etc.\) to workflows.

```go
type TriggerType string
```

<a name="TriggerRecordTransition"></a>The TriggerType constants enumerate the supported trigger dispatch keys.

```go
const (
    // TriggerRecordTransition fires when a record state-transition event
    // arrives matching the trigger's config.record_type, config.from_state,
    // config.to_state.
    TriggerRecordTransition TriggerType = "record_transition"
)
```

<a name="TryCatchFrame"></a>
## type TryCatchFrame

TryCatchFrame is one entry in a saga's try\_catch stack. When a step inside the try block errors, the coordinator pops the top frame and jumps to its CatchStep instead of failing the saga.

```go
type TryCatchFrame struct {
    StepID    string `json:"step_id"`    // the try_catch step itself
    CatchStep string `json:"catch_step"` // step ID to jump to on error
}
```

<a name="UserTask"></a>
## type UserTask

UserTask is one row in runtime.saga\_user\_tasks. Created by the manual\_approval and collect\_input verbs; submitted via POST /api/v1/sagas/\{run\_id\}/user\_task/\{task\_id\}/submit.

```go
type UserTask struct {
    ID          uuid.UUID      `json:"id"`
    RunID       uuid.UUID      `json:"run_id"`
    StepID      string         `json:"step_id"`
    Assignee    string         `json:"assignee"`
    DueAt       *time.Time     `json:"due_at,omitempty"`
    FormSchema  map[string]any `json:"form_schema,omitempty"`
    SubmittedAt *time.Time     `json:"submitted_at,omitempty"`
    SubmittedBy string         `json:"submitted_by,omitempty"`
    Result      map[string]any `json:"result,omitempty"`
}
```

<a name="WorkflowDefinition"></a>
## type WorkflowDefinition

WorkflowDefinition is one version of one workflow. Stored in definitions.workflow\_definitions.

```go
type WorkflowDefinition struct {
    ID          string            `json:"id"`
    Version     int               `json:"version"`
    TenantID    *string           `json:"tenant_id,omitempty"`
    Name        string            `json:"name"`
    Description string            `json:"description,omitempty"`
    Start       string            `json:"start"`
    Entrypoints map[string]string `json:"entrypoints,omitempty"` // entry name -> step id; "" / "default" => Start
    Steps       []Step            `json:"steps"`
    Published   bool              `json:"published"`
    CreatedAt   time.Time         `json:"created_at,omitempty"`
    CreatedBy   string            `json:"created_by,omitempty"`
}
```

<a name="WorkflowDefinition.ResolveEntry"></a>
### func \(WorkflowDefinition\) ResolveEntry

```go
func (d WorkflowDefinition) ResolveEntry(entrypoint string) (string, error)
```

ResolveEntry returns the step id a run should begin at for the named entry point. "" and "default" resolve to Start. An unknown name returns an error.

<a name="WorkflowDefinition.StepByID"></a>
### func \(\*WorkflowDefinition\) StepByID

```go
func (d *WorkflowDefinition) StepByID(id string) (Step, bool)
```

StepByID returns the step with the given ID and whether it was found.

Generated by [gomarkdoc](<https://github.com/princjef/gomarkdoc>)
